fix: add favorites logic